notes/figures: Testing new static image filename scraping scheme

--- a/notes/figures.htm
+++ b/notes/figures.htm
@@ -121,62 +121,62 @@ var figs = [
 	 */
 
 /*
-	[ '1536230', '57dd2', 're-ment miku miku ♪ room miniature #1 of 8' ],
-	[ '1536252', '08790', 're-ment miku miku ♪ room miniature #2 of 8' ],
-	[ '1536231', '9277b', 're-ment miku miku ♪ room miniature #3 of 8' ],
-	[ '1536233', '7ee99', 're-ment miku miku ♪ room miniature #4 of 8' ],
-	[ '1536234', '4c1f3', 're-ment miku miku ♪ room miniature #5 of 8' ],
-	[ '1536236', '79c77', 're-ment miku miku ♪ room miniature #6 of 8' ],
-	[ '1536237', 'c53b8', 're-ment miku miku ♪ room miniature #7 of 8' ],
-	[ '1536238', '0e4a2', 're-ment miku miku ♪ room miniature #8 of 8' ],
+	[ '1536230', 'b1904', 're-ment miku miku ♪ room miniature #1 of 8' ],
+	[ '1536252', 'a8865', 're-ment miku miku ♪ room miniature #2 of 8' ],
+	[ '1536231', '5efb0', 're-ment miku miku ♪ room miniature #3 of 8' ],
+	[ '1536233', '7215f', 're-ment miku miku ♪ room miniature #4 of 8' ],
+	[ '1536234', 'a0238', 're-ment miku miku ♪ room miniature #5 of 8' ],
+	[ '1536236', '07d51', 're-ment miku miku ♪ room miniature #6 of 8' ],
+	[ '1536237', 'aea78', 're-ment miku miku ♪ room miniature #7 of 8' ],
+	[ '1536238', 'a3e5c', 're-ment miku miku ♪ room miniature #8 of 8' ],
 */
 
-	[ '1335582', '45071', 'sega sakura miku v3 SPM' ],
-	[ '1571286', '13885', 'sega miku christmas 2022 SPM' ],
-	[ '1479579', '2b77d', 'sega miku 15th anniversary kei ver. SPM' ],
-	[ '1549222', '51878', 'sega miku 15th anniversary zhou ver. SPM' ],
-	[ '1275355', '6d5f6', 'sega preciality special nuigurumi sakura miku' ],
-	[ '1213389', 'b3aa1', 'good smile genshin impact venti nendoroid #1795' ],
-	[ '1189088', '749c7', 'good smile hatsune miku nt nendoroid #1701' ],
-	[ '1499800', '5eb8d', 'taito miku artist masterpiece latidos 2022 ver.' ],
-	[ '1220581', '68abc', 'taito miku artist masterpiece pricess arabian ver.' ],
-	[ 'x1214387', '2ce6c', 'knockoff taito miku wonderland rapunzel' ],
-	[ 'x314683', 'dd714', 'knockoff sega miku fuwa fuwa nuigurumi plush (strap)' ],
-	[ 'x370088', '9e436', 'knockoff sega miku fuwa fuwa mega jumbo nuigurumi plush' ],
-	[ 'x514129', '953bd', 'knockoff sega nyanko miku fuwa fuwa mega jumbo nuigurumi plush' ],
-	[ 'x809190', 'f14f9', 'knockoff furyu miku noodle stopper figure' ],
-	[ 'x2987', '316e0', 'knockoff max factory figma miku #014' ],
-	[ '401018', '46ea9', 'sega project diva innocent SPM miku' ],
-	[ '718192', '46a35', 'hatsune miku 2nd season Winter ver.' ],
-	[ '1251026', '4cdac', 'bandai q posket miku type a' ],
-	[ '944728', 'e11c7', 'furyu miku bicute bunnies' ],
-	[ '1311067', '71abf', 'taito miku artist masterpiece princess alice' ],
-	[ '1268909', '1026e', 'taito miku artist masterpiece 14th anniv.' ],
-	[ '1293291', '0722b', 'furyu sakura miku noodle stopper' ],
-	[ '886807', '361bd', 'taito sakura miku 2020 ver.' ],
-	[ '1216990', 'd5032', 'racing miku 2021 espresto' ],
-	[ '1035745', '30ee2', "sega mega 39's breathe you SPM miku" ],
-	[ '1112719', '9eef3', 'miku big nuigurumi plush' ],
-	[ '756832', 'e2f87', 'hatsune miku 2nd season Spring ver.' ],
-	[ '776143', '83ba8', 'hatsune miku 2nd season Summer ver.' ],
-	[ '4741', 'b8f3f', 'hatsune miku piano EX figure 2009' ],
-	[ '1150601', 'e3581', 'miku nesoberi nuigurumi (strap)' ],
-	[ '798190', '976e1', 'sega sakura miku SPM' ],
-	[ '720383', '9fd05', 'sega fate/extella link astolfo SPM' ],
-	[ '693275', '0efa8', 'miku mega jumbo nuigurumi plush 2018' ],
-	[ '675904', '9186d', 'good smile gochiusa sxarp nendoroid #929' ],
-	[ '689123', 'a8cdd', 'good smile snow princess miku nendoroid #1000' ],
-	[ '464596', '0159f', 'good smile konosuba megumin nendoroid #725' ],
-	[ '440687', '03e24', 'sega project diva X SPM miku' ],
-	[ '583734', 'a013e', 'sega izayoi sakuya prize figure' ],
-	[ '200768', '787a5', 'funko pop rocks miku #39' ],
-	[ '246546', '3a64c', 'sega project diva F2nd miku' ],
-	[ 'x287774', '7757e', 'knockoff good smile umaru-chan nendoroid #524' ],
-	[ 'x26113', '16c9a', 'knockoff good smile snow miku nendoroid #150' ],
-	[ '198604', '17661', 'sega project diva 2nd miku' ],
-	[ '47413', 'fbbec', 'banpresto kogami akira lucky star' ],
-	[ '167123', 'b82e3', 'sega project diva arcade miku 2012' ],
-	[ '100292', '62674', 'hatsune miku plush great eastern 2012' ],
+	[ '1335582', '0d57a', 'sega sakura miku v3 SPM' ],
+	[ '1571286', '62065', 'sega miku christmas 2022 SPM' ],
+	[ '1479579', '350f9', 'sega miku 15th anniversary kei ver. SPM' ],
+	[ '1549222', 'ba009', 'sega miku 15th anniversary zhou ver. SPM' ],
+	[ '1275355', 'cead8', 'sega preciality special nuigurumi sakura miku' ],
+	[ '1213389', '66d9e', 'good smile genshin impact venti nendoroid #1795' ],
+	[ '1189088', 'f9b14', 'good smile hatsune miku nt nendoroid #1701' ],
+	[ '1499800', '3a8d0', 'taito miku artist masterpiece latidos 2022 ver.' ],
+	[ '1220581', '63347', 'taito miku artist masterpiece pricess arabian ver.' ],
+	[ 'x1214387', 'ea438', 'knockoff taito miku wonderland rapunzel' ],
+	[ 'x314683', 'a7e6a', 'knockoff sega miku fuwa fuwa nuigurumi plush (strap)' ],
+	[ 'x370088', '07616', 'knockoff sega miku fuwa fuwa mega jumbo nuigurumi plush' ],
+	[ 'x514129', '1bee9', 'knockoff sega nyanko miku fuwa fuwa mega jumbo nuigurumi plush' ],
+	[ 'x809190', '8d2a0', 'knockoff furyu miku noodle stopper figure' ],
+	[ 'x2987', '9fa5f', 'knockoff max factory figma miku #014' ],
+	[ '401018', 'bfb66', 'sega project diva innocent SPM miku' ],
+	[ '718192', '29017', 'hatsune miku 2nd season Winter ver.' ],
+	[ '1251026', '7c5ff', 'bandai q posket miku type a' ],
+	[ '944728', 'c98b0', 'furyu miku bicute bunnies' ],
+	[ '1311067', '82a91', 'taito miku artist masterpiece princess alice' ],
+	[ '1268909', 'f4650', 'taito miku artist masterpiece 14th anniv.' ],
+	[ '1293291', 'c95e9', 'furyu sakura miku noodle stopper' ],
+	[ '886807', '5b4b2', 'taito sakura miku 2020 ver.' ],
+	[ '1216990', '90105', 'racing miku 2021 espresto' ],
+	[ '1035745', 'ba361', "sega mega 39's breathe you SPM miku" ],
+	[ '1112719', '82ba8', 'miku big nuigurumi plush' ],
+	[ '756832', 'd4634', 'hatsune miku 2nd season Spring ver.' ],
+	[ '776143', '679aa', 'hatsune miku 2nd season Summer ver.' ],
+	[ '4741', '3b1b2', 'hatsune miku piano EX figure 2009' ],
+	[ '1150601', '1e1ef', 'miku nesoberi nuigurumi (strap)' ],
+	[ '798190', 'f61e7', 'sega sakura miku SPM' ],
+	[ '720383', '21905', 'sega fate/extella link astolfo SPM' ],
+	[ '693275', 'f40e6', 'miku mega jumbo nuigurumi plush 2018' ],
+	[ '675904', '1161e', 'good smile gochiusa sxarp nendoroid #929' ],
+	[ '689123', '2750f', 'good smile snow princess miku nendoroid #1000' ],
+	[ '464596', 'd0803', 'good smile konosuba megumin nendoroid #725' ],
+	[ '440687', 'be7e3', 'sega project diva X SPM miku' ],
+	[ '583734', 'ccf32', 'sega izayoi sakuya prize figure' ],
+	[ '200768', 'e13a1', 'funko pop rocks miku #39' ],
+	[ '246546', '9cbfc', 'sega project diva F2nd miku' ],
+	[ 'x287774', 'f7c92', 'knockoff good smile umaru-chan nendoroid #524' ],
+	[ 'x26113', 'a69e3', 'knockoff good smile snow miku nendoroid #150' ],
+	[ '198604', '64215', 'sega project diva 2nd miku' ],
+	[ '47413', 'd5289', 'banpresto kogami akira lucky star' ],
+	[ '167123', '00cd8', 'sega project diva arcade miku 2012' ],
+	[ '100292', '0bb7d', 'hatsune miku plush great eastern 2012' ],
 ];
 
 var thumbs = document.getElementById('fig-thumbs');
