notes/figures: Made some things static, more fixes.

--- a/notes/figures.htm
+++ b/notes/figures.htm
@@ -63,11 +63,11 @@ Unfortunately, I live an ocean away from a <em>UFO catcher</em> full of figurine
 </thead>
 <tbody>
 <tr>
-<td><img src="https://static.myfigurecollection.net/upload/items/0/186-f9170.jpg" alt="ico-fig" /></td>
+<td><img src="$DOC_ROOT/notes/assets/miku-nendo.jpg" alt="ico-fig" /></td>
 <td><strong>Owned</strong></td>
 </tr>
 <tr>
-<td><img src="https://static.myfigurecollection.net/upload/items/0/186-f9170.jpg" alt="ico-fig-fake" /></td>
+<td><img src="$DOC_ROOT/notes/assets/miku-nendo.jpg" alt="ico-fig-fake" /></td>
 <td><strong>Owned (Fake/Bootleg)</strong></td>
 </tr>
 </tbody>
@@ -229,7 +229,7 @@ for (var i in figs) {
 <section class="footnotes">
 <ol>
 <li id="fn1">
-<p>Note: If images are broken it means mfc <a href="https://github.com/microsounds/microsounds.github.io/commit/10c49ea">changed their API endpoints again</a>. <a href="#fnref1" class="footnote-backref">↩</a></p>
+<p>Note: mfc likes to <a href="https://github.com/microsounds/microsounds.github.io/commit/10c49ea">change their API endpoints</a> a lot, if images are broken, it’s not for <a href="https://raw.githubusercontent.com/microsounds/microsounds.github.io/master/.scripts/fetch-figure-pics.sh">a lack of trying</a>. <a href="#fnref1" class="footnote-backref">↩</a></p>
 </li>
 <li id="fn2">
 <p>A wild new frontier in bootlegs, this is a combination of
