--- a/notes/dotfiles.htm
+++ b/notes/dotfiles.htm
@@ -36,8 +36,8 @@
 <div class="content">
 <!--kagami v0.6.5 — static microblog processor-->
 <h1>Selected documentation and usage notes for my dotfiles<span id="Selected-documentation-and-usage-notes-for-my-dotfiles"></span></h1>
-<p><strong>Revision No. <b style="font-size: 130%">867</b>, commit <code>9edc480</code>.</strong></p>
-<p><strong>“x48: Enable use of XShm extension”</strong></p>
+<p><strong>Revision No. <b style="font-size: 130%">868</b>, commit <code>7f2c9cb</code>.</strong></p>
+<p><strong>“gh-actions: Nothing important”</strong></p>
 <div class="toc">
 <p>Table of Contents</p>
 <ul>
@@ -121,17 +121,17 @@
 in this repo is about <strong>5:1</strong>.</p>
 <p>If this document is <em>28.7KiB</em> in
 size, and the approximate size of all comment lines of code is
-<em>64.6KiB</em> then this document
-currently covers about <b style="font-size: 130%;">8.89%</b>
+<em>64.7KiB</em> then this document
+currently covers about <b style="font-size: 130%;">8.88%</b>
 of all implemented features and behavior in this repository.
 This is just an <a href="https://github.com/microsounds/microsounds.github.io/raw/master/.scripts/dotfiles-ls.sh">automated guess</a> though.</p>
 <p>This document and repository is also mirrored at
 <a href="https://github.com/microsounds/atelier"><code>microsounds/atelier</code></a> on GitHub.</p>
-<p>Last updated 🌑 Fri, Feb 3rd, 2023.</p>
+<p>Last updated 🌖 Fri, Feb 24th, 2023.</p>
 <!-- header and github badges -->
 <!-- github readmes only support align attributes for styling -->
 <div style="text-align: center;">
-<h1><em>dotfiles—“atelier”</em><img src="/static/shimemiku/shime1b.png" alt="shimeji" /><span id="_dotfilesatelier_"></span></h1>
+<h1><em>dotfiles—“atelier”</em><img src="/static/shimemiku/shime6.png" alt="shimeji" /><span id="_dotfilesatelier_"></span></h1>
 <p><img src="https://img.shields.io/github/commit-activity/m/microsounds/atelier?logo=github" alt="ico-freq" />
 <img src="https://img.shields.io/github/repo-size/microsounds/atelier?logo=github" alt="ico-size" />
 <a href="https://github.com/microsounds/atelier/actions/workflows/ci.yml" title="unit tests"><img src="https://github.com/microsounds/atelier/actions/workflows/ci.yml/badge.svg" alt="ico-ci" /></a>
@@ -913,7 +913,7 @@ Plaintext <code>chromium</code> configuration is an ongoing experiment of mine.<
 </ul>
 <h2><code>notify-send</code><span id="notify-send"></span></h2>
 <p>This particular <a href="https://github.com/microsounds/atelier/raw/master/.local/lib/notify-send"><code>notify-send</code></a> implements only <code>-t</code> for expiration time in seconds,
-because it doesn’t tie into any <code>dbus</code>-based notification daemon implementing the <a href="https://www.galago-project.org/specs/notification/0.9/index.html" title="freedesktop.org Desktop Notifications spec">Desktop Notifications spec</a>.</p>
+because it doesn’t tie into any <code>dbus</code>-based notification daemon implementing the <a href="https://specifications.freedesktop.org/notification-spec/latest/" title="freedesktop.org Desktop Notifications spec">Desktop Notifications spec</a>.</p>
 <p>Instead, it’s just a shell script that writes to a named pipe that gets picked up by <a href="https://github.com/microsounds/atelier/raw/master/Scripts/wm_status.sh"><code>xwin-statusd</code></a> as a simple way to implement OSD text and single-line notifications.</p>
 <p>Unlike other implementations, you can pass notifications/OSD text as an argument or via stdin without using <code>xargs</code>.</p>
 <h2><code>sc</code> (spreadsheet calculator)<span id="sc-spreadsheet-calculator"></span></h2>
@@ -985,9 +985,9 @@ found in the current revision:</em></p>
 <li><code>xwin_widgets.sh v0.4</code></li>
 </ul>
 <p><em>Total on-disk size of the current revision is
-212.11KiB
+212.25KiB
 out of a total compressed git history size of
-774.59KiB.</em></p>
+770.61KiB.</em></p>
 </blockquote>
 <h1>Complete source listing<span id="Complete-source-listing"></span></h1>
 <pre><code><span class="term-prompt">microsounds@shami</span>:<span class="term-dir">~</span>$ git meta ls-tree --name-only -r master | xargs ls -lhgG
@@ -1030,7 +1030,7 @@ lrwxrwxrwx 1   14   (symbolic link)   rev. 0   .config/dmenu/pre-run -> ../dwm/p
 -rw-r--r-- 1  939   Dec 15 2021 19:58 rev. 1   <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.config/xorg/ntc-chip.conf">.config/xorg/ntc-chip.conf</a>
 -rw-r--r-- 1  289   Aug 29 2020 21:25 rev. 2   <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.config/xorg/nvidia.conf">.config/xorg/nvidia.conf</a>
 -rw-r--r-- 1 1.4K   Oct 24 2022 00:54 rev. 27  <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.gitconfig">.gitconfig</a>
--rw-r--r-- 1 3.4K   Jan 20 2023 11:59 rev. 27  <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.github/workflows/ci.yml">.github/workflows/ci.yml</a>
+-rw-r--r-- 1 3.6K   Feb 24 2023 12:01 rev. 28  <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.github/workflows/ci.yml">.github/workflows/ci.yml</a>
 -rw-r--r-- 1 2.5K   Sep 15 2022 02:32 rev. 7   <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.github/workflows/magnet-dl.yml">.github/workflows/magnet-dl.yml</a>
 -rwxr-xr-x 1  232   Jan  5 2023 18:36 rev. 1   <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.local/bin/ascii2ps">.local/bin/ascii2ps</a>
 -rwxr-xr-x 1 2.2K   Dec 27 2021 16:17 rev. 16  <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.local/bin/chromium">.local/bin/chromium</a>
@@ -1126,10 +1126,10 @@ lrwxrwxrwx 1   27   (symbolic link)   rev. 0   .local/lib/path-gitstatus -> ../.
 -rwxr-xr-x 1 1.4K   Dec  3 2021 23:13 rev. 19  <a href="https://raw.githubusercontent.com/microsounds/atelier/master/Scripts/xwin_webm.sh">Scripts/xwin_webm.sh</a>
 -rwxr-xr-x 1 3.0K   Dec 13 2021 02:28 rev. 17  <a href="https://raw.githubusercontent.com/microsounds/atelier/master/Scripts/xwin_widgets.sh">Scripts/xwin_widgets.sh</a>
 -rw-r--r-- 1 2.0K   Mar 12 2022 17:16 rev. 5   <a href="https://raw.githubusercontent.com/microsounds/atelier/master/Userscripts/youtube_screenshot.user.js">Userscripts/youtube_screenshot.user.js</a>
--rw-r--r-- 1  29K   Jan 27 2023 13:04 rev. 186 <a href="https://raw.githubusercontent.com/microsounds/atelier/master/readme&#46;md">readme&#46;md</a>
+-rw-r--r-- 1  29K   Feb 24 2023 12:01 rev. 187 <a href="https://raw.githubusercontent.com/microsounds/atelier/master/readme&#46;md">readme&#46;md</a>
 </code></pre>
 <!-- created Mon, 19 Aug 2019 22:48:18 -0700 -->
-<!-- updated Fri, 3 Feb 2023 18:17:46 -0800 -->
+<!-- updated Fri, 24 Feb 2023 12:01:54 -0800 -->
 <hr/>
 <div class="footer">
 	<span class="right" style="padding-left: 5px">
