--- a/notes/figures.htm
+++ b/notes/figures.htm
@@ -63,11 +63,11 @@ Unfortunately, I live an ocean away from a <em>UFO catcher</em> full of figurine
 </thead>
 <tbody>
 <tr>
-<td><img src="$DOC_ROOT/notes/assets/miku-nendo.jpg" alt="ico-fig" /></td>
+<td><img src="/notes/assets/miku-nendo.jpg" alt="ico-fig" /></td>
 <td><strong>Owned</strong></td>
 </tr>
 <tr>
-<td><img src="$DOC_ROOT/notes/assets/miku-nendo.jpg" alt="ico-fig-fake" /></td>
+<td><img src="/notes/assets/miku-nendo.jpg" alt="ico-fig-fake" /></td>
 <td><strong>Owned (Fake/Bootleg)</strong></td>
 </tr>
 </tbody>
@@ -138,7 +138,7 @@ var figs = [
 	[ '1275355', 'cead8', 'sega preciality special nuigurumi sakura miku' ],
 	[ '1213389', '66d9e', 'good smile genshin impact venti nendoroid #1795' ],
 	[ '1189088', 'f9b14', 'good smile hatsune miku nt nendoroid #1701' ],
-	[ '1499800', '3a8d0', 'taito miku artist masterpiece latidos 2022 ver.' ],
+	[ '1499800', '', 'taito miku artist masterpiece latidos 2022 ver.' ],
 	[ '1220581', '63347', 'taito miku artist masterpiece pricess arabian ver.' ],
 	[ 'x1214387', 'ea438', 'knockoff taito miku wonderland rapunzel' ],
 	[ 'x314683', 'a7e6a', 'knockoff sega miku fuwa fuwa nuigurumi plush (strap)' ],
