Ongoing project, piecing together where I've been

--- a/index.htm
+++ b/index.htm
@@ -105,6 +105,11 @@ Anyone can create their own personal sandbox on the web and put as much or as li
 </ul>
 <h2>Even older<span id="Even-older"></span></h2>
 <ul>
+<li><em>(2015-2018)</em> An older, abandoned iteration of this website — <a href="https://microsounds.neocities.org"><code>microsounds.neocities.org</code></a>
+<ul>
+<li><em>I was never much for writing then either.</em></li>
+</ul>
+</li>
 <li><em>(2012-2015)</em> <span class="blink" style="color: #FFA5B5;"><em>NSFW!</em></span>
 a collection of <em>“About Mes”</em> previously published on Last.fm
 — <a href="/misc/last-fm.htm"><code>/misc/last-fm.htm</code></a>
