notes/useful-links: Added diskprices.com

--- a/notes/useful-links.htm
+++ b/notes/useful-links.htm
@@ -154,6 +154,11 @@
 </ul>
 <p><strong>misc</strong> —</p>
 <ul>
+<li><a href="https://diskprices.com">disk prices</a>
+<ul>
+<li><em>Automatically curated list of new/used disk storage prices on Amazon.com for various countries.</em></li>
+</ul>
+</li>
 <li><a href="https://www.sudomemo.net">sudomemo</a>
 <ul>
 <li><em>A revival of <a href="https://en.wikipedia.org/wiki/Flipnote_Studio">Flipnote Hatena</a>, a 2010s online hosting service for Nintendo DSi/3DS Flipnote Studio animations.</em></li>
