notes/useful-links: Added link to original WWW project site

--- a/notes/useful-links.htm
+++ b/notes/useful-links.htm
@@ -36,7 +36,7 @@
 <div class="content">
 <!--kagami v0.6.5 — static microblog processor-->
 <!-- started 2022/8/3 -->
-<!-- updated 2023/1/2 -->
+<!-- updated 2023/3/17 -->
 <h1>Fun and Useful Links to Elsewhere<span id="Fun-and-Useful-Links-to-Elsewhere"></span></h1>
 <details>
 <summary><span style="font-size: 130%;">Startpage Links</span></summary>
@@ -186,6 +186,11 @@
 <li><em>So you can buy a stuffed IKEA shark and immediately derail any thread on 4chan.</em></li>
 </ul>
 </li>
+<li><a href="http://info.cern.ch/">The World Wide Web Project</a>
+<ul>
+<li><em>Browse the first ever web page, romanticized history and opinions on the creation of the WWW at CERN between 1989-1993.</em></li>
+</ul>
+</li>
 </ul>
 <p><strong>web 1.0-esque inspirations for this website</strong> <span class="blink" style="color: #FFFF00;"><em>NSFW!</em></span> —</p>
 <ul>
@@ -210,7 +215,7 @@
 </li>
 </ul>
 <p>A mix of my startpage links and random bookmarks you might find useful.<br/>
-Updated 🌘 Mon, Jan 2nd, 2023</p>
+Updated 🌔 Fri, Mar 17th, 2023</p>
 <hr/>
 <div class="footer">
 	<span class="right" style="padding-left: 5px">
