Fixed navbar links to homepage

--- a/.kagami/head.htm
+++ b/.kagami/head.htm
@@ -16,11 +16,11 @@
 <body>
 <audio hidden="hidden" id="bgm"></audio>
 <div class="navbar">
-	<a href="{DOC_ROOT}/index.htm">
+	<a href="{DOC_ROOT}/">
 		<img class="avatar" alt="avatar" src="{DOC_ROOT}/static/avatar.png" />
 	</a>
 	<div class="container">
-		<div class="title"><a href="{DOC_ROOT}/index.htm">{SITE_TITLE}</a></div>
+		<div class="title"><a href="{DOC_ROOT}/">{SITE_TITLE}</a></div>
 		<div class="subtitle" id="subtitle">{SITE_DESCRIPTION}</div>
 		<ul>
 			<li><a id="bgm_toggle" href="javascript:play()">♫ play</a></li>
