--- a/notes/low-profile-gpus-for-sff-pcs.htm
+++ b/notes/low-profile-gpus-for-sff-pcs.htm
@@ -16,11 +16,11 @@
 <body>
 <audio hidden="hidden" id="bgm"></audio>
 <div class="navbar">
-	<a href="/index.htm">
+	<a href="/">
 		<img class="avatar" alt="avatar" src="/static/avatar.png" />
 	</a>
 	<div class="container">
-		<div class="title"><a href="/index.htm">sentimental µsounds</a></div>
+		<div class="title"><a href="/">sentimental µsounds</a></div>
 		<div class="subtitle" id="subtitle">unix and post-ironic anemoia, µsounds' starlit diary</div>
 		<ul>
 			<li><a id="bgm_toggle" href="javascript:play()">♫ play</a></li>
