--- a/notes/useful-links.htm
+++ b/notes/useful-links.htm
@@ -36,7 +36,7 @@
 <div class="content">
 <!--kagami v0.6.5 — static microblog processor-->
 <!-- started 2022/8/3 -->
-<!-- updated 2023/3/17 -->
+<!-- updated 2023/4/6 -->
 <h1>Fun and Useful Links to Elsewhere<span id="Fun-and-Useful-Links-to-Elsewhere"></span></h1>
 <details>
 <summary><span style="font-size: 130%;">Startpage Links</span></summary>
@@ -202,7 +202,8 @@
 <li><a href="https://cyber.dabamos.de">The Cyber Vanguard</a></li>
 <li><a href="https://www.bell-labs.com/usr/dmr/www">Dennis M. Ritchie</a></li>
 <li><a href="https://getgle.org">getgle</a></li>
-<li><a href="https://web.archive.org/web/20220731061144/https://dokodemo.neocities.org/">dokodemo</a></li>
+<li><a href="https://dokode.moe">dokodemo</a></li>
+<li><a href="https://web.archive.org/web/20220731061144/https://dokodemo.neocities.org/">dokodemo <em>(pre-2023)</em></a></li>
 <li><a href="https://eda.gay">eden’s site</a></li>
 <li><a href="https://maki.cafe">maki.cafe</a></li>
 <li><a href="https://allyratworld.neocities.org/home.html">allyratworld</a></li>
@@ -215,7 +216,7 @@
 </li>
 </ul>
 <p>A mix of my startpage links and random bookmarks you might find useful.<br/>
-Updated 🌔 Fri, Mar 17th, 2023</p>
+Updated 🌑 Thu, Apr 6th, 2023</p>
 <hr/>
 <div class="footer">
 	<span class="right" style="padding-left: 5px">
