notes/useful-links: Updated bookmarks, related to arcades and air traffic

--- a/notes/useful-links.htm
+++ b/notes/useful-links.htm
@@ -36,7 +36,7 @@
 <div class="content">
 <!--kagami v0.6.5 — static microblog processor-->
 <!-- started 2022/8/3 -->
-<!-- updated 2023/4/6 -->
+<!-- updated 2023/4/30 -->
 <h1>Fun and Useful Links to Elsewhere<span id="Fun-and-Useful-Links-to-Elsewhere"></span></h1>
 <details>
 <summary><span style="font-size: 130%;">Startpage Links</span></summary>
@@ -151,6 +151,11 @@
 </ul>
 </li>
 <li><a href="https://www.logicalincrements.com/articles/graphicscardcomparison">Logical Increments: GPU Comparison</a></li>
+<li><a href="https://old.reddit.com/r/rhythmgames/comments/w8cxcs/arcade_ic_card_faq/">Japanese Arcade IC card FAQ</a>
+<ul>
+<li><em>Westerner’s guide to IC cards for Japanese arcade games, Aime, e-Amusement, Banapass, NESiCA, etc.</em></li>
+</ul>
+</li>
 </ul>
 <p><strong>misc</strong> —</p>
 <ul>
@@ -191,6 +196,16 @@
 <li><em>Browse the first ever web page, romanticized history and opinions on the creation of the WWW at CERN between 1989-1993.</em></li>
 </ul>
 </li>
+<li><a href="https://globe.adsbexchange.com/">ADS-B Exchange</a>
+<ul>
+<li><em>View live air traffic and aircraft flight paths in your area, or anywhere in the world.</em></li>
+</ul>
+</li>
+<li><a href="https://zenius-i-vanisher.com/v5.2/arcades.php">Zenius-I-vanisher.com Arcade Machine Locator</a>
+<ul>
+<li><em>Database of arcade businesses and arcade machine locations, covers a wide variety of eastern and western game series.</em></li>
+</ul>
+</li>
 </ul>
 <p><strong>web 1.0-esque inspirations for this website</strong> <span class="blink" style="color: #FFFF00;"><em>NSFW!</em></span> —</p>
 <ul>
@@ -216,7 +231,7 @@
 </li>
 </ul>
 <p>A mix of my startpage links and random bookmarks you might find useful.<br/>
-Updated 🌑 Thu, Apr 6th, 2023</p>
+Updated 🌘 Sun, Apr 30th, 2023</p>
 <hr/>
 <div class="footer">
 	<span class="right" style="padding-left: 5px">
