Links to my discord are no longer obfuscated

--- a/index.htm
+++ b/index.htm
@@ -119,9 +119,12 @@ a collection of <em>“About Mes”</em> previously published on Last.fm
 </li>
 </ul>
 <h2>Contact me<span id="Contact-me"></span></h2>
+<p>Feel free to message me over d*scord anytime, I receive push notifications even when doing offline stuff.</p>
+<p><a href="https://discord.com/users/194678252806078466"><img src="https://discord.c99.nl/widget/theme-6/194678252806078466.png" alt="nolink" /></a></p>
 <p>If it’s about a project or a page on this website, open an issue or a pull request on GitHub at one of the links above.</p>
+<p><span id="discord-update"></span></p>
 <p><span class="blink" style="color: #FFFF00;"><em>New!</em></span> —
-If you want to contact me directly over e-mail or discord, my contact info is below.<br/>
+If you want to contact me by e-mail, my contact info is below.<br/>
 It’s not really a puzzle, just remove spaces and newlines and swap the places of every 2 characters like this, <code>1MUk -&gt; M1kU</code>, and decode the resultant mess as <code>base64</code>, then <code>gzip</code>.</p>
 <pre><code><span class="term-prompt">microsounds@shami</span>:<span class="term-dir">~</span>$ cat contact.txt | gzip -c | base64 -w 0 \
 &gt;	| sed -E -e 's/(.)(.)/\2\1/g' -e 's/.&#123;4&#125;/&amp; /g' | fold -s
@@ -165,6 +168,16 @@ copy-pasted directly from someone's website.</em>
 		if (this.status == 200) {
 			document.getElementById('gh-update').innerHTML += ' Last updated on ' +
 				new Date(JSON.parse(this.response).commit.commit.author.date).toLocaleDateString() + '.';
+		}
+	};
+	req.send();
+
+	/* fetch discord information */
+	api = 'https://api.lanyard.rest/v1/users/194678252806078466'
+	req = new XMLHttpRequest();
+	req.open('GET, api, true);
+	req.onload = function() {
+		if (this.status == 200) {
 		}
 	};
 	req.send();
