Added plug for the discord presence API used

--- a/index.htm
+++ b/index.htm
@@ -120,7 +120,8 @@ a collection of <em>“About Mes”</em> previously published on Last.fm
 </ul>
 <h2>Contact me<span id="Contact-me"></span></h2>
 <p>I’m <span id="discord-name"></span> on d*scord, feel free to message me anytime, I receive push notifications even when offline.
-Currently <span id="discord-status"></span>.</p>
+Currently <span id="discord-status"></span>.
+<span class="footer" style="color: #CCC;">Powered by <a href="https://github.com/Phineas/lanyard">Lanyard API</a></span></p>
 <p>If it’s about a project or a page on this website, open an issue or a pull request on GitHub at one of the links above.</p>
 <p><span class="blink" style="color: #FFFF00;"><em>New!</em></span> —
 If you want to contact me by e-mail, my contact info is below.<br/>
