notes/figures: i don't wanna host my own own figure pics!!

--- a/notes/figures.htm
+++ b/notes/figures.htm
@@ -138,7 +138,7 @@ var figs = [
 	[ '1275355', '94c12', 'sega preciality special nuigurumi sakura miku' ],
 	[ '1213389', '85cfa', 'good smile genshin impact venti nendoroid #1795' ],
 	[ '1189088', 'f9b14', 'good smile hatsune miku nt nendoroid #1701' ],
-	[ '1499800', '3a8d0', 'taito miku artist masterpiece latidos 2022 ver.' ],
+	[ '1499800', '04668', 'taito miku artist masterpiece latidos 2022 ver.' ],
 	[ '1220581', '696bc', 'taito miku artist masterpiece pricess arabian ver.' ],
 	[ 'x1214387', 'ea438', 'knockoff taito miku wonderland rapunzel' ],
 	[ 'x314683', 'e7d29', 'knockoff sega miku fuwa fuwa nuigurumi plush (strap)' ],
