--- a/index.htm
+++ b/index.htm
@@ -119,7 +119,7 @@ a collection of <em>“About Mes”</em> previously published on Last.fm
 </li>
 </ul>
 <h2>Contact me<span id="Contact-me"></span></h2>
-<p>I’m <span id="discord-name"></span> on d*scord, feel free to message me anytime, I receive push notifications even when offline.
+<p>I’m <span id="discord-name"></span> on d*scord, feel free to message me anytime, I receive push notifications even when offline.<br/>
 Currently <span id="discord-status"></span>.
 <span class="footer" style="color: #CCC;">Powered by <a href="https://github.com/Phineas/lanyard">Lanyard API</a></span></p>
 <p>If it’s about a project or a page on this website, open an issue or a pull request on GitHub at one of the links above.</p>
@@ -185,12 +185,12 @@ copy-pasted directly from someone's website.</em>
 	req.onload = function() {
 		if (this.status == 200) {
 			/* name and avatar */
+			var user = JSON.parse(this.response).data.discord_user;
 			document.getElementById('discord-name').innerHTML +=
 				'<em><a title="Click to add me directly!" href="https://discord.com/users/' + uid + '">' +
 				'<img src="https://cdn.discordapp.com/avatars/' + uid +
-				'/' + JSON.parse(this.response).data.discord_user.avatar + '.png?size=40" /> ' +
-				JSON.parse(this.response).data.discord_user.username + '#' +
-				JSON.parse(this.response).data.discord_user.discriminator + '</a></em>';
+				'/' + user.avatar + '.png?size=40" /> ' +
+				user.username + ((!!!user.discriminator) ? '#' + user.discriminator : '') + '</a></em>';
 
 			/* presence */
 			var f = document.getElementById('discord-status');
