notes/figures: Fixed icon borders on mobile chrome

--- a/notes/figures.htm
+++ b/notes/figures.htm
@@ -128,9 +128,9 @@ That being said, I won’t advise against buying them willingly and deliberately
 		width: 64px;
 	}
 	[alt*="fig"]:hover { opacity: unset; }
-	[alt*="fake"] {	border: #932525 solid;	}
-	[alt*="pre"] {	border: #E1D97A dashed;	opacity: 65%; }
-	[alt*="wish"] {	border: #86CDCD dashed;	opacity: 65%; }
+	[alt*="fake"] {	border: 3px #932525 solid; }
+	[alt*="pre"] {	border: 3px #E1D97A dashed; opacity: 65%; }
+	[alt*="wish"] {	border: 3px #86CDCD dashed; opacity: 65%; }
 </style>
 <script type="text/javascript">
 /* <![CDATA[ */
