--- a/notes/figures.htm
+++ b/notes/figures.htm
@@ -36,9 +36,9 @@
 <div class="content">
 <!--kagami v0.6.5 — static microblog processor-->
 <!-- started 2022/4/21 -->
-<!-- updated 2023/6/23 -->
+<!-- updated 2023/6/26 -->
 <h1>My Collection of Assorted Figurines<span id="My-Collection-of-Assorted-Figurines"></span></h1>
-<p>Last updated 🌖 Fri, Jun 23rd, 2023</p>
+<p>Last updated 🌗 Mon, Jun 26th, 2023</p>
 <p>Here’s my <del>small, yet</del> growing IRL collection of figurines and other assorted cute things.
 Most are <em>“prize figures”</em> of the variety you could win from a Japanese <a href="https://www.youtube.com/watch?v=93c9oTU7ut0">“skill” claw machine</a>.
 Unfortunately, I live an ocean away from a <em>UFO catcher</em> full of figurines of everyone’s favorite <a href="https://www.youtube.com/watch?v=f91sM4rI76w&amp;hl=en">virtual idol</a>, so I can only buy them.</p>
@@ -148,10 +148,10 @@ var figs = [
 	[ 'p1618453', '9b371', 'good smile pop up parade OMGkawaiiAngel' ],
 	[ 'p1780064', '4d72e', 'taito miku artist masterpiece birthday 2023 ver.' ],
 	[ 'p1873722', '4bef0', 'taito miku fashion figure uniform ver.' ],
-	[ 'p1696654', '98c36', 'furyu miku flower fairy noodle stopper' ],
+	[ '1696654', '98c36', 'furyu miku flower fairy noodle stopper' ],
 	[ 'p945860', '328b2', 'good smile miku nendoroid doll' ],
-	[ 'p1226915', '1067b', 'good smile miku date outfit ver. nendoroid doll' ],
-	[ 'p1616455', '1154b', 'good smile pop up parade miku DECO*27 the vampire ver. L' ],
+	[ '1226915', '1067b', 'good smile miku date outfit ver. nendoroid doll' ],
+	[ '1616455', '1154b', 'good smile pop up parade miku DECO*27 the vampire ver. L' ],
 	[ 'p1779734', 'e4220', 'taito miku fashion figure subculture ver.' ],
 
 	[ '1335582', '0d57a', 'sega sakura miku v3 SPM' ],
